prevent column break in dictionary links

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -415,3 +415,7 @@ hr {
 .semi-transparent {
   opacity: .5;
 }
+
+.no-col-break {
+  -webkit-column-break-inside: avoid;
+}
